--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,71 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+dining2.jpg
+index.html
+package-lock.json
+package.json
+prac.html
+prac.js
+prac2.js
+project_5/react-5/
+project_5/react-router/
+recipe/package-lock.json
+recipe/package.json
+recipe/public/favicon.ico
+recipe/public/index.html
+recipe/public/logo192.png
+recipe/public/logo512.png
+recipe/public/manifest.json
+recipe/public/robots.txt
+recipe/README.md
+recipe/src/App.js
+recipe/src/App.test.js
+recipe/src/component/index.js
+recipe/src/component/InputBox.jsx
+recipe/src/container/CurrencyConvertor.jsx
+recipe/src/container/PasswordGenrator.jsx
+recipe/src/hooks/useCurrencyHooks.js
+recipe/src/index.css
+recipe/src/index.js
+recipe/src/logo.svg
+recipe/src/output.css
+recipe/src/reportWebVitals.js
+recipe/src/setupTests.js
+recipe/tailwind.config.js
+script.js
+src/App.js
+src/assets/icons/circle.svg
+src/assets/icons/investigation-calendar.svg
+src/assets/images/mobile-coupon-top1.png
+src/assets/images/mobile-coupon-top2.png
+src/assets/images/mobile-coupon-top3.png
+src/assets/images/mobile-coupon-top4.png
+src/assets/images/mobile-coupon-top5.png
+src/assets/images/mobile-coupon-top6.png
+src/assets/images/sign-up-step-two-img.png
+src/components/Admin.jsx
+src/components/Chck.jsx
+src/components/Chng.jsx
+src/components/CouponSlider.jsx
+src/components/Faq.jsx
+src/components/Meminfo.jsx
+src/components/MyForm.jsx
+src/components/NavBar.jsx
+src/components/NewDate.jsx
+src/components/SubAbout.jsx
+src/components/SubAbout2.jsx
+src/components/User.jsx
+src/components/UserDetails.jsx
+src/components/ViewMore.jsx
+src/container/About.jsx
+src/container/Resort1.jsx
+src/container/Resort2.jsx
+src/Home.jsx
+src/style/_event.scss
+src/style/_faq.scss
+src/style/_home.scss
+src/style/_navbar.scss
+src/style/_table.scss
+src/style/style.scss
+style.css
